--- a/Lecture_0_IntroAndSyllabus/hello_world.ipynb
+++ b/Lecture_0_IntroAndSyllabus/hello_world.ipynb
@@ -9,27 +9,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello, World!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name\n"
+     ]
+    }
+   ],
    "source": [
     "print('Name')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Python programming!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Welcome to Python programming!\")"
    ]
@@ -58,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
